--- a/src/Components/Drink_page.css
+++ b/src/Components/Drink_page.css
@@ -1,3 +1,23 @@
-img.Drink-thumbnail {
-    width: 100%;
-  }
+.Drink-page-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+.Drink-page-image {
+  margin: 0;
+  width: 100%;
+}
+
+.Drink-page-text {
+  padding-top: 20px;
+} 
+
+.Drink-page-tags {
+  font-weight: 100;
+  font-style: italic;
+}
