--- a/src/Components/Nav_bar.css
+++ b/src/Components/Nav_bar.css
@@ -1,19 +1,49 @@
 .NavBar {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
-  
-  .NavBar button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    font-size: 1rem;
-    text-align: center;
-  }
-  
-  .NavBar button:nth-child(3) {
-    width: 60px;
-    height: 60px;
-  }
-  
+  width: 100%;
+  max-width: 900px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.NavBar button {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  font-size: 1rem;
+  text-align: center;
+  background-color: #fff;
+  border: 3px solid #ffd500ff;
+}
+
+.NavBar button:nth-child(3) {
+  width: 60px;
+  height: 60px;
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  color: #ffd500ff;
+  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
