--- a/src/Components/Nav_bar.css
+++ b/src/Components/Nav_bar.css
@@ -1,5 +1,6 @@
 .NavBar {
   width: 100%;
+  height: 80px;
   max-width: 900px;
   display: flex;
   justify-content: space-evenly;
@@ -12,16 +13,16 @@
   border-radius: 50%;
   font-size: 1rem;
   text-align: center;
-  background-color: #fff;
-  border: 1px solid #e3e3e3;
+  background-color: #ffd500ff;
+  border: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.NavBar button:nth-child(3) {
-  width: 60px;
-  height: 60px;
+.NavBar button.active {
+  background-color: #fff;
+  color: #ffd500ff;
 }
 
 .material-icons {
@@ -30,7 +31,7 @@
   font-style: normal;
   font-size: 28px;
   
-  color: #e3e3e3;
+  color: #fff;
   /* Preferred icon size */
   display: inline-block;
   line-height: 1;
