--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 body {
+  border: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 code {
