--- a/src/Components/CocktailList.css
+++ b/src/Components/CocktailList.css
@@ -1,8 +1,8 @@
 .cocktail-list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
-    padding: 0 10px; 
+    grid-gap: 0;
+    padding: 0;
   }
   
   .cocktail-item {
@@ -25,5 +25,27 @@
   .cocktail-image {
     width: 100%;
     height: auto;
+  }
+  
+  .cocktail-image-placeholder {
+    display: none;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+    background-color: #ccc;
+    position: absolute;
+    top: 0;
+    left: 0;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .broken-image-icon {
+    font-size: 48px;
+    color: rgba(255, 255, 255, 0.29);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   
