--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap');
 
 h1 {
-  font-size: 2em;
+  font-size: 1.5em;
   font-weight: 700;
   line-height: 1.5;
   margin: 0;
 }
 
-p {
+h2 {
   font-size: 1.2em;
+  font-weight: 700;
+  line-height: 1.2;
+  margin: 0;
+}
+
+p {
+  font-size: 1em;
   font-weight: 400;
   line-height: 1.5;
   margin: 0;
@@ -52,6 +59,7 @@ p {
   position: absolute;
   bottom: 0;
   left: 0;
+  right: 0;
   width: 100vw;
   max-width: 900px;
   display: flex;
