--- a/src/Components/Nav_bar.css
+++ b/src/Components/Nav_bar.css
@@ -1,8 +1,8 @@
 .NavBar {
   position: fixed;
   bottom: 0;
-  left: 0;
-  right: 0;
+  left: 50%;
+  right: 50%;
   z-index: 1000;
   width: 100%;
   height: 80px;
@@ -11,13 +11,14 @@
   justify-content: space-evenly;
   align-items: center;
   background-color: #ffd500ff;
+  transform: translateX(-50%);
 }
 
 .NavBar button {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  font-size: 1rem;
+  font-size: 1em;
   text-align: center;
   background-color: #ffd500ff;
   border: 0px;
@@ -29,6 +30,7 @@
 .NavBar button.active {
   background-color: #fff;
   color: #ffd500ff;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
 .material-icons {
@@ -36,8 +38,9 @@
   font-weight: normal;
   font-style: normal;
   font-size: 28px;
-  
   color: #fff;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+
   /* Preferred icon size */
   display: inline-block;
   line-height: 1;
@@ -51,14 +54,20 @@
   -webkit-font-smoothing: antialiased;
   /* Support for Safari and Chrome. */
   text-rendering: optimizeLegibility;
-
   /* Support for Firefox. */
   -moz-osx-font-smoothing: grayscale;
-
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
 
 .material-icons.active {
   color: #ffd500ff; /* Change this to your desired active color */
+  text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (min-width: 900px) {
+  .NavBar {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
