refactored consistensy in Favorites

--- a/src/Components/Drink_page.css
+++ b/src/Components/Drink_page.css
@@ -39,7 +39,7 @@ h2 {
   cursor: pointer;
 }
 
-.drink-page-header .favorite-icon.favourite {
+.drink-page-header .favorite-icon.favorite {
   color: #ffd500ff;
 }
 
