--- a/src/Components/CocktailList.css
+++ b/src/Components/CocktailList.css
@@ -20,7 +20,8 @@
   color: #fff;
   text-align: center;
   background-image: linear-gradient(to top, #000, transparent);
-  padding: 20px 10px;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  padding: 15px 15px;
 }
 
 .cocktail-image {
