--- a/src/Components/Main_Quickstart.css
+++ b/src/Components/Main_Quickstart.css
@@ -39,7 +39,7 @@
 }
 
 .quickstart-button {
-    background-color: #ffd500ff;
+    background-color: #ffc400;
     border: none;
     cursor: pointer;
     font-size: 1.2em;
