Changed app main color ro Teal to better contrasts

--- a/src/Components/Main_Quickstart.css
+++ b/src/Components/Main_Quickstart.css
@@ -35,11 +35,10 @@
     grid-template-rows: repeat(2, auto);
     grid-gap: 15px;
     width: 100%;
-    background-color: #111;
 }
 
 .quickstart-button {
-    background-color: #ffc400;
+    background-color: #004d4d;
     border: none;
     cursor: pointer;
     font-size: 1.2em;
