Fixed more layering in regards to logo in backgrnd

--- a/src/Components/Main_Quickstart.css
+++ b/src/Components/Main_Quickstart.css
@@ -1,4 +1,6 @@
 .main-quickstart {
+    position: relative;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
