refactored interaction visuals in app

--- a/src/Components/Drink_page.css
+++ b/src/Components/Drink_page.css
@@ -45,6 +45,13 @@ h2 {
   color: #ffd500;
 }
 
+.drink-page-header .favorite-icon:active,
+.drink-page-header .favorite-icon:focus {
+  background-color: transparent !important;
+  outline: none !important;
+  box-shadow: none !important;
+}
+
 .image-container {
   position: relative;
 }
