--- a/src/Components/Nav_bar.css
+++ b/src/Components/Nav_bar.css
@@ -20,7 +20,7 @@
   border-radius: 50%;
   font-size: 1em;
   text-align: center;
-  background-color: #004d4d;
+  background-color: transparent;
   border: 0px;
   display: flex;
   justify-content: center;
