--- a/src/Components/Logo.css
+++ b/src/Components/Logo.css
@@ -1,7 +1,7 @@
 .App-logo {
     position: fixed;
     z-index: 0;
-    fill: #0c0c0c;
+    fill: #030303;
     width: 90%;
     height: auto;
     position: absolute;
