--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   justify-content: center;
   align-items: center;
   /* background-color: #042b2b; */
-  background: linear-gradient(to top, #051515, #042b2b);
+  background: linear-gradient(to top, #008c8c, #ffffff);
   color: #fff;
 }
 
