--- a/src/Components/Search_bar.css
+++ b/src/Components/Search_bar.css
@@ -2,17 +2,18 @@
     position: relative;
     z-index: 2;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     width: 80%;
-    padding: 20px 0;
-    background-color: #ffffff00;
-}
+    background-color: #ffffff;
+    box-shadow: 1px 1px 5px #00000080;
+    border-radius: 50px;
+    margin-bottom: 20px;
+  }
 
 .search-bar-container {
     position: relative;
     z-index: 2;
-    background-image: linear-gradient(to top, #000, transparent);
+    background-image: linear-gradient(to top, #00000022, transparent);
     position: absolute;
     bottom: 80px;
     left: 0;
@@ -24,11 +25,16 @@
     flex-grow: 1;
     border: none;
     outline: none;
+    border-radius: 50px;
 }
+
+
 
 .search-bar .search-field input::placeholder {
     font-family: 'Roboto', sans-serif;
     font-size: 1.2rem;
+    font-weight: 600;
+    
 }
 
 .search-bar .search-field input:focus {
@@ -38,32 +44,35 @@
 
 .search-bar .search-field input {
     width: 100%;
-    height: 45px;
-    border-radius: 50px;
+    height: 50px;
     border: 0px;
     padding: 0px 20px;
-    font-size: 1rem;
-    background-color: #fff;
+    font-size: 1.2rem;
+    font-weight: 600;
+    background-color: transparent;
 }
 
 .search-btn {
-    width: 45px;
-    height: 45px;
+    position: absolute;
+    right: 0;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     font-size: 1rem;
     text-align: center;
-    background-color: #fff;
+    background-color: #004d4d;
     border: 0px;
     display: flex;
     justify-content: center;
     align-items: center;
-}
+  }
 
 .search-bar .search-icon {
     font-family: 'Material Icons';
-    font-weight: 700;
+    font-weight: 40;
     font-size: 28px;
-    color: #004d4d;
+    color: #ffffff;
+    text-shadow: 1px 1px 1px transparent;
 }
 
 .material-icons:active {
