--- a/src/Components/Main_page.css
+++ b/src/Components/Main_page.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     height: calc(100vh - 80px);
+    padding: 0 15px;
 }
 
 .main-page-content {
@@ -9,10 +10,16 @@
     overflow-y: auto;
 }
 
-.search-bar-container {
+.main-page-search-bar-container {
     display: flex;
     justify-content: center;
+    position: fixed;
+    bottom: 95px;
+    left: 15px;
+    right: 15px;
+    z-index: 2;
 }
+
 
 .main-quickstart-widget {
     padding: 15px;
@@ -26,4 +33,4 @@
     bottom: 8%;
     left: 50%;
     transform: translateX(-50%);
-  }
+}
