--- a/src/Components/Create_Drink_page.css
+++ b/src/Components/Create_Drink_page.css
@@ -1,6 +1,12 @@
-h1 {
-  padding-top: 40px;
-  font-size: 2em;
+.create-drink-h1 {
+  font-size: 1.5em;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.create-drink-h2 {
+  font-size: 1.2em;
+  margin: 0;
 }
 
 p {
@@ -24,6 +30,55 @@ p {
   margin-bottom: 20px;
 }
 
-form input:not([type="radio"]), form select, form textarea, form button {
+form input:not([type="radio"]),
+form select,
+form textarea,
+form button {
   width: 100%;
+  padding: 0px 15px;
+}
+
+form input:not([type="radio"]),
+form select,
+form textarea {
+  box-sizing: border-box;
+  border: 0px;
+  height: 40px;
+  border-radius: 50px;
+  border: 1px solid #ccc;
+  margin-top: 15px;
+}
+
+.create-drink-contains-alcohol {
+  margin-top: 15px;
+}
+
+.create-drink-add-more-ingredients {
+  margin-top: 15px;
+}
+
+input::placeholder {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.1rem;
+  font-weight: 500;
+}
+
+.create-drink-button {
+  background-color: #004d4d;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2em;
+  text-align: center;
+  line-height: 1;
+  position: relative;
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+}
+
+.create-drink-button-text {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  color: #fff;
+  text-shadow: 1px 1px 1px #00000030;
 }
