--- a/src/Components/Favourites_page.css
+++ b/src/Components/Favourites_page.css
@@ -1,4 +1,10 @@
 
+.favorites-h1 {
+  text-align: center;
+  padding-bottom: 20px;
+  font-size: 2em;
+}
+
 .favorite-container {
     padding: 15px;
   }
